@@ -42,3 +42,4 @@ Version 0.8
 * send messages whenever modules are inserted or removed
 * always make sure VSNs are legal
 * use su, not ssh
+* mk5dir and mk5cp now report on replaced data
